# anvil

./: .coverage.Mac_lan.pid41236.XmQZ4RFx.HNQIp837rWOh  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  compose.yaml  diff_stages.py  opencode.json  pyproject.toml  sonar-project.properties  train0.py  train1.py  train2.py  train3.py  train5.py
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS
.github/workflows/: auto-bump.yml  ci-workflow.yml  ci.yml  release.yml
.opencode/command/: owasp-review.md  thread-model-review.md
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: coverage-to-85.md  custom-dataset-features.md  external-compute-backends.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  tasks-template.md
Sessions/: 2026-06-20-copyright-header-attribution.md
anvil/: __init__.py  _pyfunc_model.py  cli.py  config.py  gpu.py  workbench.py
anvil/api/: __init__.py  api_key_store.py  app.py  auth.py  deps.py
anvil/client/: __init__.py  anvil_client.py
anvil/core/: __init__.py  _tokenizer_base.py  autograd.py  engine.py  step_observation.py  tokenizer.py  torch_engine.py  vocabulary.py
anvil/data/: curated-models.yaml
anvil/db/: __init__.py  base.py  migration.py  migration_error.py  registry.py  schema_version.py  session.py  timestamp_mixin.py
anvil/services/: __init__.py  capability_unavailable.py  corpora.py  corpus_loader.py  corpus_scan_result.py  curation_result.py  dataset_curation.py  dataset_export.py  dataset_import.py  datasets.py  demo_bootstrap.py  experiments.py  export.py  import_result.py  inference.py  loaded_model.py  memory_estimator.py  metrics_collectors.py  metrics_result.py  mlflow_inputs.py  models.py  mps_metrics_collector.py  mps_sampler_thread.py  parsed_sample.py  stop_requested.py  tracking.py  training.py
anvil/storage/: __init__.py  file_info.py  interface.py  local.py
anvil/supervisor/: __init__.py  services.py  supervisor.py
anvil/workspace/: __init__.py  boot_config.py  workspace_paths.py
docs/: agentic-harness-recommendations.md  functional-api-e2e-suite.md  owasp-review.md  owasp-tracker.csv  playwright-ui-smoke-harness.md  secrets.md  testing-guide.md  thread-model-review-2026-06-21.md  thread-model-tracker.csv  user-requirements.md
docs/usability/: HANDOFF.md  INTEGRATION.md  Makefile  ux-rules.md  ux_lint.py  ux_review.py
docs/vault/: Dev Workflow - All Extras  index.md
examples/: diff_stages.py  train0.py  train1.py  train2.py  train3.py  train4.py  train5.py
microgpt/: __init__.py  cli.py  config.py  gpu.py
microgpt/api/: __init__.py  app.py  deps.py
microgpt/core/: __init__.py  autograd.py  engine.py  tokenizer.py  torch_engine.py
microgpt/db/: __init__.py  session.py
microgpt/services/: __init__.py  corpora.py  corpus_loader.py  dataset_curation.py  dataset_export.py  dataset_import.py  datasets.py  experiments.py  inference.py  metrics_collectors.py  mlflow_capabilities.py  mlflow_inputs.py  models.py  tracking.py  training.py
microgpt/storage/: __init__.py  interface.py  local.py
microgpt/supervisor/: __init__.py  services.py  supervisor.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial.py  002_add_model_registry.py  002b_add_model_registry.py  003_add_corpus_id_to_training_configs.py  005_add_block_size_to_corpora.py  008_make_experiment_config_id_nullable.py  010_add_parent_id_to_corpora.py  011_add_compute_columns.py  013_drop_experiment_registry_tables_add_run_id_seq.py  12a4027155f0_merge_002b_and_006_heads.py
scripts/: README.md  detect-gpu-platform.sh  seed_demo_model.py
scripts/ci/: check_adr_unique.py  check_bump_scope.py  check_guarded_imports.py  check_migration_integrity.py  check_version.py  detect_increment.py  ux_lint.py  ux_review.py  vault_audit.py
scripts/release/: build_notes.py
shared/: cli.mk  database.mk  helper.mk  python.mk  server.mk  sonar.mk  testing.mk  ux.mk  vault.mk
specs/001-bootstrap-datasets/: plan.md  research.md  spec.md  tasks.md
specs/001-bootstrap-llm-workbench/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dataset-curation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-non-educational-help-guide/: plan.md  quickstart.md  research.md  tasks.md
specs/002-directory-corpus-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-model-registry-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-model-registry-tracking/: plan.md  research.md  spec.md  tasks.md
specs/004-frontend-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-dataset-curation/: plan.md  spec.md  tasks.md
specs/005-learning-content-enrichment/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-mlflow-experiment-tracking/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/006-llama-engine-evolution/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/006-mlflow-experiment-tracking/: plan.md  quickstart.md  spec.md  tasks.md
specs/007-automated-semver-release/: data-model.md  plan.md  spec.md  tasks.md
specs/007-learning-content-enrichment/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/008-auto-db-schema/: data-model.md  plan.md  spec.md  tasks.md
specs/008-llama-engine-evolution/: plan.md  research.md  spec.md  tasks.md
specs/009-bootstrap-datasets/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/009-pip-installable-package/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/010-automated-semver-release/: plan.md  quickstart.md  (+3 more)
tests/: __init__.py  conftest.py  helpers.py  test_bootstrap.py
(+2118 files in other folders)
