[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microgpt-workbench"
version = "0.1.0"
description = "An LLM training workbench built on Karpathy's microgpt"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "microgpt contributors"},
]

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "jinja2>=3.1,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "aiofiles>=24.0,<25",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
    "pathspec>=0.12,<1",
    "psutil>=5.9,<7",
]

[tool.setuptools.packages.find]
include = ["microgpt*"]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
]
dev = [
    "ruff>=0.5,<1",
    "black>=24.0,<25",
    "isort>=5.13,<6",
    "pylint>=3.2,<4",
    "mypy>=1.10,<2",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "coverage>=7.0,<8",
]

[project.scripts]
microgpt-workbench = "microgpt.cli:serve"
microgpt-train = "microgpt.cli:train"
microgpt-corpus = "microgpt.cli:corpus_main"
microgpt-stop = "microgpt.cli:stop"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "C4", "UP", "ASYNC", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/**/*.py" = ["E402", "F401", "B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["microgpt"]

[tool.pylint]
max-line-length = 88
disable = [
    "R0801", "too-many-arguments", "too-many-branches",
    "too-many-instance-attributes", "too-many-lines",
    "too-many-locals", "too-many-public-methods",
    "too-many-return-statements",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=microgpt --cov-report=term-missing"

[tool.coverage.run]
source = ["microgpt"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true