[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil"
version = "0.1.0"
description = "Train and experiment with small LLMs from scratch"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "anvil contributors"},
]

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "jinja2>=3.1,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "aiofiles>=24.0,<25",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
    "pathspec>=0.12,<1",
    "psutil>=5.9,<7",
    "python-multipart>=0.0.18,<1",
    "mlflow>=3.1,<4",  # resolved version: 3.13.0
    "safetensors>=0.4,<1",
    "numpy>=1.24,<2",
]

[tool.setuptools.packages.find]
include = ["anvil*"]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
    "nvidia-ml-py>=12,<13",
]
compute = [
    "modal>=0.70,<1",
]
dev = [
    "ruff>=0.5,<1",
    "black>=24.0,<25",
    "isort>=5.13,<6",
    "pylint>=3.2,<4",
    "mypy>=1.10,<2",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "coverage>=7.0,<8",
    "commitizen>=3.0,<4",
]

[project.scripts]
anvil = "anvil.cli:serve"
anvil-train = "anvil.cli:train"
anvil-corpus = "anvil.cli:corpus_main"
anvil-stop = "anvil.cli:stop"
anvil-migrate-registry = "anvil.cli:migrate_registry"
anvil-bootstrap-datasets = "anvil.cli:bootstrap_datasets_main"
anvil-db = "anvil.cli:db_main"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "C4", "UP", "ASYNC", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/**/*.py" = ["E402", "F401", "B011", "F841", "RUF006"]
"migrations/**" = ["E402", "F401"]
"examples/**" = ["E402", "E741"]
"anvil/api/v1/corpora.py" = ["E741"]
"anvil/api/v1/datasets.py" = ["B904"]
"anvil/api/v1/eval.py" = ["ASYNC240"]
"anvil/api/v1/experiments.py" = ["ASYNC240", "ASYNC230"]
"anvil/api/v1/router.py" = ["ASYNC221", "ASYNC240", "B904"]
"anvil/api/v1/training.py" = ["ASYNC230"]
"anvil/services/inference.py" = ["ASYNC240"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["anvil"]

[tool.pylint]
max-line-length = 88
disable = [
    "R0801", "too-many-arguments", "too-many-branches",
    "too-many-instance-attributes", "too-many-lines",
    "too-many-locals", "too-many-public-methods",
    "too-many-return-statements",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false

[[tool.mypy.overrides]]
module = "anvil.services.tracking"
ignore_errors = true

[[tool.mypy.overrides]]
module = "anvil.services.mlflow_inputs"
ignore_errors = true

[[tool.mypy.overrides]]
module = "anvil.services.mlflow_capabilities"
ignore_errors = true

[[tool.mypy.overrides]]
module = "anvil.services.metrics_collectors"
ignore_errors = true

[[tool.mypy.overrides]]
module = "anvil.api.v1.eval_datasets"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=anvil --cov-report=term-missing"

[tool.coverage.run]
source = ["anvil"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "semver"
tag_format = "v$version"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_incremental = true
changelog_file = "CHANGELOG.md"