[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil"
version = "0.2.4"
description = "Train and experiment with small LLMs from scratch"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Josh Burt", email = "josh@shapeandshare.com"},
]

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "jinja2>=3.1,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "aiofiles>=24.0,<25",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
    "pathspec>=0.12,<1",
    "psutil>=5.9,<7",
    "python-multipart>=0.0.18,<1",
    "mlflow>=3.1,<4",  # resolved version: 3.13.0
    "safetensors>=0.4,<1",
    "numpy>=1.24,<2",
]

[tool.setuptools.packages.find]
include = ["anvil*"]

[tool.setuptools.package-data]
anvil = [
    "py.typed",
    "_resources/alembic.ini",
    "_resources/migrations/*.py",
    "_resources/migrations/*.mako",
    "_resources/migrations/versions/*.py",
    "data/demo/**/*.txt",
    "data/demo/**/*.md",
    "data/demo/**/*.json",
    "api/static/**/*",
    "api/templates/**/*",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0,<3",
    "nvidia-ml-py>=12,<13",
]
compute = [
    "modal>=0.70,<1",
]
vault-health = [
    "networkx>=3,<4",
]
dev = [
    "ruff>=0.5,<1",
    "black>=24.0,<25",
    "isort>=5.13,<6",
    "pylint>=3.2,<4",
    "mypy>=1.10,<2",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=5.0,<6",
    "coverage>=7.0,<8",
    "commitizen>=3.0,<4",
    "pytest-playwright>=0.5,<1",
]

[project.scripts]
anvil = "anvil.cli:main"
anvil-train = "anvil.cli:train"
anvil-corpus = "anvil.cli:corpus_main"
anvil-stop = "anvil.cli:stop"
anvil-bootstrap-datasets = "anvil.cli:bootstrap_datasets_main"
anvil-db = "anvil.cli:db_main"
anvil-vault = "anvil.services.vault.cli:main"
anvil-show-api-key = "anvil.cli:show_api_key"
anvil-backup = "anvil.services.backup.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "C4", "UP", "ASYNC", "RUF", "D"]
ignore = ["E501", "B008", "D205", "D401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "D100", "D104"]
"tests/**/*.py" = ["E402", "F401", "B007", "B011", "B017", "C401", "F841", "RUF001", "RUF002", "RUF005", "RUF006", "RUF012", "RUF015", "RUF043", "RUF059", "E741", "ASYNC240", "D100", "D101", "D102", "D103", "D104", "D107"]
"anvil/_resources/migrations/**" = ["E402", "F401", "RUF002", "D"]
"examples/**" = ["E402", "E741", "B007", "B905", "RUF059", "D"]
"scripts/**" = ["D"]
"anvil/api/v1/corpora.py" = ["E741"]
"anvil/api/v1/datasets.py" = ["B904"]
"anvil/api/v1/eval.py" = ["ASYNC240"]
"anvil/api/v1/experiments.py" = ["ASYNC240", "ASYNC230"]
"anvil/api/v1/router.py" = ["ASYNC221", "ASYNC240", "B904"]
"anvil/api/v1/training.py" = ["ASYNC230"]
"anvil/services/inference/inference.py" = ["ASYNC240"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["anvil"]

[tool.pylint]
max-line-length = 88
disable = [
    "E0401", "E0611", "E1101", "E1102", "E1136",
    "R0801", "too-many-arguments",
    "too-many-branches", "too-many-instance-attributes",
    "too-many-lines", "too-many-locals",
    "too-many-public-methods", "too-many-return-statements",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
enable_error_code = [
    "ignore-without-code",
    "possibly-undefined",
    "redundant-cast",
    "redundant-expr",
]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "anvil.services.tracking"
ignore_errors = true  # TODO(ADR-0NN): narrow to specific error codes; blocked by mlflow stubs

[[tool.mypy.overrides]]
module = "anvil.services.mlflow_inputs"
ignore_errors = true  # TODO(ADR-0NN): narrow to specific error codes; blocked by mlflow stubs



[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --cov=anvil --cov-report=term-missing --ignore=tests/system --ignore=tests/browser"

[tool.coverage.run]
source = ["anvil"]
omit = ["tests/*", "anvil/_resources/migrations/*", "tests/system/*", "tests/browser/*"]

[tool.coverage.report]
fail_under = 23
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "semver"
tag_format = "v$version"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_incremental = true
changelog_file = "CHANGELOG.md"